--- a/FrontEnd/assala_iskane_front/src/CSS/Login_singin.css
+++ b/FrontEnd/assala_iskane_front/src/CSS/Login_singin.css
@@ -56,8 +56,8 @@ body, html {
     color: #ffffff; /* White input text color */
   }
   
-  .login-button {
-    width: 100%;
+  .login-button,.signin-button {
+    width: 115%;
     padding: 10px;
     border-radius: 4px;
     border: none;
@@ -65,9 +65,78 @@ body, html {
     color: #ffffff; /* White button text color */
     font-size: 16px;
     cursor: pointer;
+    margin-bottom: 5px;
   }
   
-  .login-button:hover {
+  .login-button:hover,.signin-button:hover {
     background-color: #006989; /* Slightly lighter blue on hover */
+  }
+  /* -------------------- */
+  .SignIn-container {
+    
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f2f5;
+    margin-top: 50px; /* Add margin-top as needed */
+    
+  }
+  
+  .login-logo-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .login-logo {
+    height: 100px;
+  }
+  
+  .login-form-container {
+    width: 100%;
+    max-width: 500px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+  }
+  
+  .login-title {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .login-input-group {
+    margin-bottom: 15px;
+    width: 100%; /* Ensure the input groups take the full width */
+  }
+  
+  .login-label {
+    display: block;
+    margin-bottom: 5px;
+    color: #555;
+  }
+  
+  .login-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .signIn2-button {
+    width: 100%;
+    padding: 10px;
+    background-color: #3f51b5;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .signIn2-button:hover {
+    background-color: #303f9f;
   }
   
