--- a/FrontEnd/assala_iskane_front/src/CSS/Loading.css
+++ b/FrontEnd/assala_iskane_front/src/CSS/Loading.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #F3F7EC;
+    background-color: white;
 }
 
 .loading-logo {
