Ajout de la gestion du stock

--- a/FrontEnd/front_v2/src/css/style.css
+++ b/FrontEnd/front_v2/src/css/style.css
@@ -887,3 +887,29 @@ h2 {
         grid-column: span 1;
     }
 } */
+/* Style pour le dropdown */
+.select-container {
+  margin-bottom: 20px;
+}
+
+.select-container select {
+  width: calc(100% - 20px);
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  color: #555;
+  appearance: none; /* Enlever la flèche par défaut sur certains navigateurs */
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007bff%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205.4%202.2%2010.4%205.8%2014.1l128%20127.9c3.6%203.6%207.8%205.8%2012.8%205.8s9.2-2.2%2012.8-5.8L287%2096.7c3.5-3.7%205.8-7.9%205.8-12.8%200-5.5-2.3-10.2-5.8-14z%22%2F%3E%3C%2Fsvg%3E');
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 12px;
+}
+
+.select-container select:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
